# clap-ext

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  audit_scorecard.json  deny.toml  justfile
.github/workflows/: audit.yml  ci.yml  deny.yml  release-attestation.yml  release.yml  scorecard.yml
crates/clap-ext/: Cargo.toml
crates/clap-ext-macros/: Cargo.toml
crates/clap-ext-macros/src/: lib.rs
crates/clap-ext/src/: clap_based_cli.rs  common_args.rs  common_subcommands.rs  error.rs  lib.rs  logging.rs
crates/clap-ext/tests/: common_args.rs  common_subcommands.rs  error.rs  integration.rs
docs/security/: THREAT_MODEL.md
docs/specs/: FR.md  TRACEABILITY.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
