[package]
name = "clap-ext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared Rust CLI extension library: common subcommands, config flags, error display for clap-based CLIs"
keywords = ["cli", "clap", "argparse", "extension", "boilerplate"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
